--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,5 +1,5 @@
 .main-header {
-    height: 140px;
+    height: 70px;
     background-color: #5c5c5c;
     /* box-shadow: #1e1e1e; */
   }
@@ -12,13 +12,13 @@
     color: rgb(255, 255, 255);
     text-decoration: none;
     margin-inline-start: 5%;
-    padding: 60px 30px;
+    padding: 30px 30px;
     /* border: 1px solid #a09e9e; */
   }
   
 li:hover {
     color: var(--clrgrn);
-    box-shadow: inset 0 -6px 0 #93a88d;
+    box-shadow: inset 0 -8px 0 #b8d4b0;
     cursor: pointer;
   }
   
