--- a/css/components/main.css
+++ b/css/components/main.css
@@ -19,11 +19,11 @@
 
 .main-layout .main-header{
     grid-column: 1/-1;
-    margin-block-end: 80px;
+    margin-block-end: 50px;
 }
 .main-layout .search-bar{
     grid-column: 3/4;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 .main-layout .gallery{
     grid-area: 3/2/4/5 ;
@@ -38,5 +38,8 @@
     display: none;
     gap: 10px;
     grid-template-columns: repeat(3,1fr);
+    padding: 10px;
+    border-radius: 15px;
+    background-color: #ecb846;
 }
 
