some mq changes

--- a/css/components/canvas.css
+++ b/css/components/canvas.css
@@ -10,8 +10,7 @@
 
 .user-inputs{
     display: grid;
-    grid-template-columns: repeat(2,1fr
-    );
+    grid-template-columns: repeat(2,1fr);
     align-items: center;
     justify-items: center;
     margin-inline-start: 5%;
@@ -19,8 +18,7 @@
 
 .text-edit-container{
     display: grid;
-    grid-template-columns: repeat(3,1fr
-    );
+    grid-template-columns: repeat(3,1fr);
     align-items: center;
     justify-items: center;
 }
