--- a/css/mq/mobile.css
+++ b/css/mq/mobile.css
@@ -1,6 +1,124 @@
 
+@media (min-width: 320px){
+  .main-layout{
+    display: grid;
+    grid-template-columns: 10px repeat(3, 1fr) 10px;
+}
+.main-header {
+    height: 40px;
+    background-color: #5c5c5c;
+    /* box-shadow: #1e1e1e; */
+  }
+  .logo {
+    margin-inline-start: 2%;
+  }
+  .logo{
+    font-size: 0.8428rem;
+    color: #adadad;
+}
+.clean-list{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    font-size: 0.7428rem ;
+    /* margin-inline-end: 80px; */
+}
 
-@media (max-width: 720px){
+  li {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    margin-inline-start: 3%;
+    padding: 5px 5px;
+    /* font-size: 8px; */
+    /* border: 1px solid #a09e9e; */
+  }
+  
+li:hover {
+    color: var(--clrgrn);
+    box-shadow: inset 0 -4px 0 #b8d4b0;
+    cursor: pointer;
+  }
+  .flex-btn{
+    font-size: 8px;
+    margin-inline-start: 5%;
+    background-color: #eda30f;
+    font-weight: bold;
+    padding: 5px;
+  }
+  .search-bar{
+    display: flex;
+    padding: 5px;
+    background-color: #fff;
+    border-radius: 5px;
+    /* width: 70%; */
+    justify-content: space-evenly;
+}
+.main-layout .gallery {
+  grid-area: 3/2/4/5;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(4, 1fr);
+  margin-bottom: 50px;
+}
+  .editor{
+    grid-area: 4/2/5/5;
+    justify-items: center;
+    display: none;
+    gap: 10px;
+    grid-template-columns: repeat(1,1fr);
+    padding: 10px;
+    border-radius: 15px;
+    background-color: #ecb846;
+}
+  .options-container{
+    grid-area: 2/1/4/1;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(7,1fr);
+    justify-items: center;
+    background-color: #fff;
+    border-radius: 15px;
+}
+
+.user-inputs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    justify-items: center;
+    margin-inline-start: 5%;
+}
+
+.text-edit-container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+    justify-items: center;
+}
+
+.text-edit-container > button{
+    width: 100%;
+    padding: 5px;
+}
+
+.temp{
+    justify-self: left;
+    height: 30px;
+    margin-inline-start: 5%;
+}
+.inputs{
+    grid-area: 3/1/5/3 ;
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    grid-template-columns: repeat(2,1fr
+    );
+}
+button{
+  font-size: 10px;
+  border-radius: 5px;
+}
+}
+@media (min-width: 720px){
     .main-layout{
         display: grid;
         grid-template-columns: 20px repeat(3, 1fr) 20px;
@@ -24,6 +142,44 @@
         font-size: 0.7428rem ;
         margin-inline-end: 80px;
     }
+    .main-header .main-nav {
+    position: fixed;
+    top: 130px;
+    right: 0;
+    height: fit-content;
+    width: 100%;
+    transform: translateX(100%);
+    color: white;
+    transition: transform 0.6s;
+  }
+
+  body.menu-open .main-nav {
+    transform: translateX(0);
+  }
+
+  .main-header .main-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main-menu > * {
+    border-bottom: 1px solid #ccc;
+  }
+
+  .main-header .main-nav a {
+    justify-content: center;
+    display: flex;
+    padding: 20px 20px;
+    background-color: var(--clr3);
+    width: 80%;
+    margin-block-start: 20px;
+    border: 1px solid white;
+  }
+
+  .main-header .main-menu a:hover {
+    background-color: #f2f2f2;
+  }
       li {
         color: rgb(255, 255, 255);
         text-decoration: none;
@@ -36,6 +192,13 @@
         color: var(--clrgrn);
         box-shadow: inset 0 -4px 0 #b8d4b0;
         cursor: pointer;
+      }
+      .main-layout .gallery {
+        grid-area: 3/2/4/5;
+        display: grid;
+        gap: 10px;
+        grid-template-columns: repeat(6, 1fr);
+        margin-bottom: 50px;
       }
       .editor{
         grid-area: 4/2/5/5;
