--- a/css/components/canvas.css
+++ b/css/components/canvas.css
@@ -4,7 +4,7 @@
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(7,1fr);
     justify-items: center;
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 15px;
 }
 
@@ -26,7 +26,7 @@
     width: 33%;
 }
 .text-edit-container > button{
-    width: 100%;
+    width: 60px;
     padding: 5px;
 }
 
