--- a/css/mq/mobile.css
+++ b/css/mq/mobile.css
@@ -1,28 +1,28 @@
-
-@media (min-width: 320px){
-  .main-layout{
+@media (min-width: 320px) {
+  .main-layout {
     display: grid;
     grid-template-columns: 10px repeat(3, 1fr) 10px;
-}
-.main-header {
+  }
+  .main-header {
     height: 40px;
     background-color: #5c5c5c;
+    padding: 15px;
     /* box-shadow: #1e1e1e; */
   }
   .logo {
     margin-inline-start: 2%;
   }
-  .logo{
+  .logo {
     font-size: 0.8428rem;
     color: #adadad;
-}
-.clean-list{
+  }
+  .clean-list {
     margin: 0;
     padding: 0;
     list-style-type: none;
-    font-size: 0.7428rem ;
+    font-size: 0.7428rem;
     /* margin-inline-end: 80px; */
-}
+  }
 
   li {
     color: rgb(255, 255, 255);
@@ -32,225 +32,443 @@
     /* font-size: 8px; */
     /* border: 1px solid #a09e9e; */
   }
-  
-li:hover {
+
+  li:hover {
     color: var(--clrgrn);
     box-shadow: inset 0 -4px 0 #b8d4b0;
     cursor: pointer;
   }
-  .flex-btn{
+  .flex-btn {
     font-size: 8px;
     margin-inline-start: 5%;
     background-color: #eda30f;
     font-weight: bold;
     padding: 5px;
   }
-  .search-bar{
+  .search-bar {
     display: flex;
     padding: 5px;
     background-color: #fff;
     border-radius: 5px;
     /* width: 70%; */
     justify-content: space-evenly;
-}
-.main-layout .gallery {
-  grid-area: 3/2/4/5;
-  display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(4, 1fr);
-  margin-bottom: 50px;
-}
-  .editor{
+  }
+  .main-layout .gallery {
+    grid-area: 3/2/4/5;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+    margin-bottom: 50px;
+  }
+  .editor {
     grid-area: 4/2/5/5;
     justify-items: center;
     display: none;
-    gap: 10px;
-    grid-template-columns: repeat(1,1fr);
+    gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
     padding: 10px;
     border-radius: 15px;
-    background-color: #ecb846;
-}
-  .options-container{
-    grid-area: 2/1/4/1;
+    /* background-color: #ecb846; */
+  }
+  .options-container {
+    grid-area: 2/1/3/1;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(7,1fr);
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 60px 50px 70px 70px;
     justify-items: center;
-    background-color: #fff;
+    background-color: #3f67c3;
+    
+    /* padding: 10px; */
+  }
+
+  .user-inputs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-items: center;
+    margin-inline-end: 10px;
+  }
+  
+  .text-edit-container {
+    display: grid;
+    grid-template-columns: repeat(3, 60px);
+    align-items: center;
+    justify-items: center;
+  }
+
+  .text-edit-container >* {
+  height: 40px;
+  font-size: 0.44rem;
+  backface-visibility: hidden;
+  background-color: #e0817e;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
+  font-size: 0.64rem;
+  height: 44px;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all .2s,box-shadow .08s ease-in;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 80px;
+  }
+.second-bottuns-container{
+  grid-area: 2/1/3/2 ;
+  display: flex;
+  align-items: center;
+}
+.second-bottuns-container >* {
+  height: 40px;
+  font-size: 0.44rem;
+  backface-visibility: hidden;
+  background-color: #e0817e;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
+  font-size: 0.64rem;
+  height: 44px;
+  line-height: 1.15;
+  margin: 12px 0 0;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all .2s,box-shadow .08s ease-in;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 80px;
+}
+
+.inputs {
+  grid-area: 4/1/5/2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+.inputs >*{
+  font-size: 0.6rem;
+  color: black;
+}
+}
+
+@media (min-width: 720px) {
+  .main-layout {
+    display: grid;
+    grid-template-columns: 20px repeat(3, 1fr) 20px;
+  }
+  .main-header {
+    height: 40px;
+    background-color: #5c5c5c;
+    /* box-shadow: #1e1e1e; */
+  }
+  .logo {
+    margin-inline-start: 10.5%;
+  }
+  .logo {
+    font-size: 1.1428rem;
+    color: #adadad;
+  }
+  .clean-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    font-size: 0.7428rem;
+    margin-inline-end: 80px;
+  }
+
+  li {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    margin-inline-start: 6%;
+    padding: 15px 15px;
+    /* border: 1px solid #a09e9e; */
+  }
+
+  li:hover {
+    color: var(--clrgrn);
+    box-shadow: inset 0 -4px 0 #b8d4b0;
+    cursor: pointer;
+  }
+  .main-layout .gallery {
+    grid-area: 3/2/4/5;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(6, 1fr);
+    margin-bottom: 50px;
+  }
+  .editor {
+    grid-area: 4/2/5/5;
+    justify-items: center;
+    display: none;
+    gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 10px;
     border-radius: 15px;
+    /* background-color: #ecb846; */
+  }
+  .options-container {
+    grid-area: 2/1/3/1;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 60px 50px 70px 70px;
+    justify-items: center;
+    background-color: #3f67c3;
+    
+    /* padding: 10px; */
+  }
+
+  .user-inputs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-items: center;
+    margin-inline-end: 10px;
+  }
+  
+  .text-edit-container {
+    display: grid;
+    grid-template-columns: repeat(3, 60px);
+    align-items: center;
+    justify-items: center;
+  }
+
+  .text-edit-container >* {
+  height: 40px;
+  font-size: 0.44rem;
+  backface-visibility: hidden;
+  background-color: #e0817e;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
+  font-size: 0.64rem;
+  height: 44px;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all .2s,box-shadow .08s ease-in;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 80px;
+  }
+.second-bottuns-container{
+  grid-area: 2/1/3/2 ;
+  display: flex;
+  align-items: center;
+}
+.second-bottuns-container >* {
+  height: 40px;
+  font-size: 0.44rem;
+  backface-visibility: hidden;
+  background-color: #e0817e;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
+  font-size: 0.64rem;
+  height: 44px;
+  line-height: 1.15;
+  margin: 12px 0 0;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all .2s,box-shadow .08s ease-in;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 80px;
 }
 
-.user-inputs{
+.inputs {
+  grid-area: 4/1/5/2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+.inputs >*{
+  font-size: 0.6rem;
+  color: black;
+}
+}
+
+@media (min-width: 1020px) {
+  .main-layout {
     display: grid;
+    grid-template-columns: 20px repeat(4, 1fr) 20px;
+  }
+  .main-header {
+    height: 40px;
+    background-color: #5c5c5c;
+    /* box-shadow: #1e1e1e; */
+  }
+  .logo {
+    margin-inline-start: 10.5%;
+  }
+  .logo {
+    font-size: 1.1428rem;
+    color: #adadad;
+  }
+  .clean-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    font-size: 0.7428rem;
+    margin-inline-end: 80px;
+  }
+
+  li {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    margin-inline-start: 6%;
+    padding: 15px 15px;
+    /* border: 1px solid #a09e9e; */
+  }
+
+  li:hover {
+    color: var(--clrgrn);
+    box-shadow: inset 0 -4px 0 #b8d4b0;
+    cursor: pointer;
+  }
+  .main-layout .gallery {
+    grid-area: 3/2/4/6;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(8, 1fr);
+    margin-bottom: 50px;
+  }
+  .editor {
+    grid-area: 4/2/5/6;
+    justify-items: center;
+    display: none;
+    gap: 5px;
     grid-template-columns: repeat(2,1fr);
-    align-items: center;
-    justify-items: center;
-    margin-inline-start: 5%;
-}
-
-.text-edit-container{
+    /* padding: 10px; */
+    border-radius: 15px;
+    background-color: #ecb846;
+  }
+  .options-container {
+    grid-area: 1/2/2/2;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    align-items: center;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 60px 50px 70px 70px;
     justify-items: center;
-}
+    background-color: #3f67c3;  
+    /* padding: 10px; */
+  }
 
-.text-edit-container > button{
-    width: 100%;
-    padding: 5px;
-}
-
-.temp{
-    justify-self: left;
-    height: 30px;
-    margin-inline-start: 5%;
-}
-.inputs{
-    grid-area: 3/1/5/3 ;
+  .user-inputs {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     justify-items: center;
-    grid-template-columns: repeat(2,1fr
-    );
-}
-button{
-  font-size: 10px;
-  border-radius: 5px;
-}
-}
-@media (min-width: 720px){
-    .main-layout{
-        display: grid;
-        grid-template-columns: 20px repeat(3, 1fr) 20px;
-    }
-    .main-header {
-        height: 40px;
-        background-color: #5c5c5c;
-        /* box-shadow: #1e1e1e; */
-      }
-      .logo {
-        margin-inline-start: 12.5%;
-      }
-      .logo{
-        font-size: 1.1428rem;
-        color: #adadad;
-    }
-    .clean-list{
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-        font-size: 0.7428rem ;
-        margin-inline-end: 80px;
-    }
-    .main-header .main-nav {
-    position: fixed;
-    top: 130px;
-    right: 0;
-    height: fit-content;
-    width: 100%;
-    transform: translateX(100%);
-    color: white;
-    transition: transform 0.6s;
+    margin-inline-end: 10px;
   }
-
-  body.menu-open .main-nav {
-    transform: translateX(0);
-  }
-
-  .main-header .main-nav {
-    display: flex;
-    flex-direction: column;
+  
+  .text-edit-container {
+    display: grid;
+    grid-template-columns: repeat(3, 60px);
     align-items: center;
+    justify-items: center;
   }
 
-  .main-menu > * {
-    border-bottom: 1px solid #ccc;
+  .text-edit-container >* {
+  backface-visibility: hidden;
+  background-color: #e0817e;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
+  font-size: 0.64rem;
+  height: 44px;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all .2s,box-shadow .08s ease-in;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 80px;
   }
-
-  .main-header .main-nav a {
-    justify-content: center;
-    display: flex;
-    padding: 20px 20px;
-    background-color: var(--clr3);
-    width: 80%;
-    margin-block-start: 20px;
-    border: 1px solid white;
-  }
-
-  .main-header .main-menu a:hover {
-    background-color: #f2f2f2;
-  }
-      li {
-        color: rgb(255, 255, 255);
-        text-decoration: none;
-        margin-inline-start: 6%;
-        padding: 15px 15px;
-        /* border: 1px solid #a09e9e; */
-      }
-      
-    li:hover {
-        color: var(--clrgrn);
-        box-shadow: inset 0 -4px 0 #b8d4b0;
-        cursor: pointer;
-      }
-      .main-layout .gallery {
-        grid-area: 3/2/4/5;
-        display: grid;
-        gap: 10px;
-        grid-template-columns: repeat(6, 1fr);
-        margin-bottom: 50px;
-      }
-      .editor{
-        grid-area: 4/2/5/5;
-        justify-items: center;
-        display: none;
-        gap: 20px;
-        grid-template-columns: repeat(1,1fr);
-        padding: 10px;
-        border-radius: 15px;
-        background-color: #ecb846;
-    }
-      .options-container{
-        grid-area: 2/1/4/1;
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        grid-template-rows: repeat(7,1fr);
-        justify-items: center;
-        background-color: #fff;
-        border-radius: 15px;
-    }
-    
-    .user-inputs{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        align-items: center;
-        justify-items: center;
-        margin-inline-start: 5%;
-    }
-    
-    .text-edit-container{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        align-items: center;
-        justify-items: center;
-    }
-    
-    .text-edit-container > button{
-        width: 100%;
-        padding: 5px;
-    }
-    
-    .temp{
-        justify-self: left;
-        height: 30px;
-        margin-inline-start: 5%;
-    }
-    .inputs{
-        grid-area: 3/1/5/3 ;
-        display: grid;
-        align-items: center;
-        justify-items: center;
-        grid-template-columns: repeat(2,1fr
-        );
-    }
+.second-bottuns-container{
+  grid-area: 2/1/3/2 ;
+  display: flex;
+  align-items: center;
 }
+.second-bottuns-container >* {
+  backface-visibility: hidden;
+  background-color: #e0817e;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
+  font-size: 0.64rem;
+  height: 44px;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all .2s,box-shadow .08s ease-in;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.inputs {
+  grid-area: 4/1/5/2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+.inputs >*{
+  font-size: 0.6rem;
+  color: black;
+}
+}
+
