--- a/css/components/canvas.css
+++ b/css/components/canvas.css
@@ -7,7 +7,9 @@
     background-color: #ffffff;
     border-radius: 15px;
 }
-
+.canvas-container{
+    width: 500px;
+}
 .user-inputs{
     display: grid;
     grid-template-columns: repeat(2,1fr);
