some majoe changes

--- a/css/css1/components/editor.css
+++ b/css/css1/components/editor.css
@@ -1,5 +1,5 @@
 .editor {
-  display: grid;
+  display: none;
   justify-content: center;
   grid-template-columns: repeat(2, 300px);
   gap: 15px;
@@ -16,4 +16,8 @@
   opacity: 1;
   gap: 10px;
   /* padding: 40px; */
+}
+.canvas-container{
+    height: 100%;
+    width: 100%;
 }
