--- a/css/css1/mq.css
+++ b/css/css1/mq.css
@@ -1,7 +1,43 @@
 
 @media (min-width: 320px){
+    .main-layout{
+        display: grid;
+        grid-template-columns: minmax(30px,60px), 1fr, minmax(30px,60px)
+    }
+    .logo {
+        font-size: 1.2428rem;
+        color: #ffffff;
+        cursor: pointer;
+        margin-inline-start: 5vw;
+}
+    .main-menu {
+        display: flex;
+        list-style: none;
+      }
+      .main-header .main-menu{
+          margin-inline-end: 60px;
+      }
+      .main-header .flex-btn{
+          font-size: 0.6rem;
+          padding: 5px;
+          border-radius: 15px;
+          margin-inline-start: 10%;
+          background-color: #e3ba31;   
+          font-weight: bold; 
+          color: #fefefe;
+      }
+      .main-header .flex-btn:hover{
+          cursor: pointer;
+      }
+      
+      .main-menu > li {
+        margin-inline-end: 10%;
+        font-size: 0.7rem;
+        color: #fefefe;
+        cursor: pointer;
+      }
     .gallery{
-        display: none;
+        display: grid;
         justify-items: center;
         background-color: #383b42;
         border-radius: 15px;
@@ -10,9 +46,17 @@
         gap: 20px ;
     }
     .main-layout .editor{
-        grid-area: 4/1/5/2
+        grid-area: 4/1/5/3;
+        grid-template-columns: repeat(1,300px);
+        grid-template-rows: repeat(2,300px);
+    }
+    .canvas-container{
+        height: 100%;
+        width: 100%;
     }
     .options-container {
+        height: 100%;
+        width: 100%;
         grid-area: 2/1/3/2;
         display: grid;
         grid-template-rows: 16.66% 16.66% 33% 16.66% 16.66%;
@@ -25,12 +69,57 @@
         gap: 10px;
         /* padding: 40px; */
       }
+      .saved-memes{
+        display: none;
+        justify-items: center;
+        background-color: #383b42;
+        border-radius: 15px;
+        grid-template-columns: repeat(4,1fr);
+        padding: 1.5vw;
+        gap: 20px ;
+    }
 }
 
 
-@media (min-width: 640px){
+@media (min-width: 830px){
+    .main-layout{
+        display: grid;
+        grid-template-columns: minmax(30px,60px), 1fr, minmax(30px,60px)
+    }
+    .logo {
+        font-size: 1.5428rem;
+        color: #ffffff;
+        cursor: pointer;
+        margin-inline-start: 8vw;
+}
+    .main-menu {
+        display: flex;
+        list-style: none;
+      }
+      .main-header .main-menu{
+          margin-inline-end: 100px;
+      }
+      .main-header .flex-btn{
+          font-size: 0.9rem;
+          padding: 10px;
+          border-radius: 15px;
+          margin-inline-start: 5%;
+          background-color: #e3ba31;   
+          font-weight: bold; 
+          color: #fefefe;
+      }
+      .main-header .flex-btn:hover{
+          cursor: pointer;
+      }
+      
+      .main-menu > li {
+        margin-inline-end: 10%;
+        font-size: 1rem;
+        color: #fefefe;
+        cursor: pointer;
+      }
     .gallery{
-        display: none;
+        display: grid;
         justify-items: center;
         background-color: #383b42;
         border-radius: 15px;
@@ -40,6 +129,12 @@
     }
     .main-layout .editor{
         grid-area: 4/1/5/3;
+        grid-template-columns: repeat(2,minmax(400px,500px));
+        grid-template-rows: repeat(1,minmax(400px,500px));
+    }
+    .canvas-container{
+        height: 100%;
+        width: 100%;
     }
     .options-container {
         grid-area: 1/2/2/3;
@@ -54,4 +149,12 @@
         gap: 10px;
         /* padding: 40px; */
       }
+      .saved-memes{
+        display: none;
+        justify-items: center;
+        background-color: #383b42;
+        grid-template-columns: repeat(4,1fr);
+        padding: 1.5vw;
+        gap: 20px ;
+    }
 }
